--- a/index.html
+++ b/index.html
@@ -1,7 +1,85 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Prueba</h1>
+    <head>
+        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+            <link href="custom.css" rel="stylesheet" type="text/css">
+                <meta charset="utf-8">
+                    <meta content="width=device-width, initial-scale=1" name="viewport">
+                        <title>
+                            Blog
+                        </title>
+                    </meta>
+                </meta>
+            </link>
+        </link>
+    </head>
+    <body>
+        <p id="top">
+            UNIVERSIDAD AUTONOMA DE SINALOA
+            <svg class="bi bi-gem" fill="currentColor" height="16" viewbox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6l3-4zm11.386 3.785-1.806-2.41-.776 2.413 2.582-.003zm-3.633.004.961-2.989H4.186l.963 2.995 5.704-.006zM5.47 5.495 8 13.366l2.532-7.876-5.062.005zm-1.371-.999-.78-2.422-1.818 2.425 2.598-.003zM1.499 5.5l5.113 6.817-2.192-6.82L1.5 5.5zm7.889 6.817 5.123-6.83-2.928.002-2.195 6.828z">
+                </path>
+            </svg>
+        </p>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img class="logo_antiguo" src="imagenes/logo_antiguo.png">
+                    </img>
+                </div>
+                <div class="col parrafo_top">
+                    <p>
+                        UNIVERSIDAD AUTONOMA DE SINALOA
+                        <br>
+                            FACULTAD DE ENFERMERIA MOCHIS
+                            <br>
+                                UNIDAD REGIONAL NORTE
+                                <br>
+                                </br>
+                            </br>
+                        </br>
+                    </p>
+                </div>
+                <div class="col">
+                    <img class="logo_uas" src="imagenes/logo_uas.png">
+                    </img>
+                </div>
+            </div>
+        </div>
+        <h1>
+            Alumna
+        </h1>
+        <p>
+            Armenta Zavala Maria Azucena
+        </p>
+        <h2>
+            Criterios para coevaluacion de temas de educacion para la salud
+        </h2>
+        <h3>
+            Higiene de manos
+            <br>
+            </br>
+        </h3>
+        <p>
+            <strong>
+                Concepto:
+            </strong>
+            Aseo, la limpieza y el cuidado de nuestro cuerpo(en este casomanos),para mejorar tu salud,conservarla y prevenir enfermedades de una manera correcta; Frotando las palmas de las manos, dorso, interdigitales, uñas, pulgares;con agua y jabón.
+        </p>
+        <p>
+            De acuerdo con el estudio de la Organización Mundial de la Salud, sólo por una inadecuada higiene de manos, mueren 5,026 personas por año a causa de diarrea, mientras que hacerlo correctamente reduce 23% elriesgo de contraer enfermedades. En México, sólo el 34% de los niños se lavan las manos Cada año, mueren más de 5 mil personas en América Latina a causa de diarrea provocada por un inadecuado lavado de manos.
+        </p>
+        <h3>
+            Higiene personal
+        </h3>
+        <p>
+            <strong>
+                Concepto:
+            </strong>
+            Es el concepto básico del aseo, de la limpieza y del cuidado del cuerpo humano. Son una serie de hábitos relacionados con el cuidado personal que inciden positivamente en la salud y que previene posibles enfermedades e infecciones. Esto con ayuda de un buen aseo personal del cuerpo completo, así evitas enfermedades y tienes más comodidad en tu persona.
+        </p>
+        <p>
+        	<strong>Problemas de salud relacionados: </strong>Las infecciones de la piel y uñas, la diarrea, la conjuntivitis, el cólera, la influenza o gripe común, entre otros.
+        </p>
     </body>
 </html>
