--- a/index.html
+++ b/index.html
@@ -81,5 +81,22 @@
         <p>
         	<strong>Problemas de salud relacionados: </strong>Las infecciones de la piel y uñas, la diarrea, la conjuntivitis, el cólera, la influenza o gripe común, entre otros.
         </p>
+        <h3>Salud bucal</h3>
+        <p>
+        	<strong>Concepto: </strong> La salud bucal, tambien llamada salud bucal, afecta todos los aspectos de nuestras vidas, ya menudo la damos por sentado tu boca es una ventana a la salud de tu cuerpo. Puede mostrar signos deficiencias nutricionales o infeccion general. Las enfermedades aquellos sistémicos que sucede a todo el cuerpo, pueden manifestarse primero debido a lesiones en la boca u otros problemas orales.
+        </p>
+        <p>
+        	<strong>Problemas de salud relacionados: </strong>La acumulación de biofilm dental provoca la aparición de las dos patologías bucales más frecuentes en niños: caries y gingivitis. • 0-2 años. En esta franja de edad erupciones los dientes temporales (dientes de leche) y las encías pueden presentar una ligera inflamación e irritación. Desde la aparición del primer diente es necesario empezar a realizar el cepillado dental. La higiene bucal es realizada por un adulto. • 2-6 años. Los niños ya tienen todos los dientes de leche. El principal objetivo es eliminar el biofilm dental para prevenir la caries y, sobre todo, que los niños adquieran el hábito de la higiene bucal, que debe ser supervisado y repasado por un adulto
+        </p>
+        <h3>Prevencion de adicciones</h3>
+        <p>
+        	<strong>Concepto: </strong>La prevención de las adicciones es el conjunto de actuaciones frente al consumo de drogas o a otras conductas adictivas encaminadas a: Eliminar o modificar los factores de riesgo. Fomentar factores de protección. La finalidad que persigue la prevención de las adicciones es: Evitar que se produzca el consumo o conducta adictiva. Retrasar su inicio.
+        </p>
+        <p>
+        	<strong>Estadistica: </strong>Los niños que a edades tempranas empiezan a experimentar el consumo de alguna droga. En el marco de las estrategias para dar respuesta a esta problemática, la Comisión Nacional contra las Adicciones ha desarrollado un paquete integral de estrategias psicoeducativas, específicamente orientado a prevenir el consumo de tabaco, alcohol y drogas entre niños, niñas y adolescentes.
+        </p>
+        <p>
+        	<strong>Factores de riesgo: </strong>En cada etapa, ocurren riesgos que se pueden cambiar a través de una intervención preventiva. Se pueden cambiar o prevenir los riesgos de Los años preescolares, tales como una conducta agresiva, con intervenciones familiares, escolares, y comunitarias dirigidas a ayudar a que los niños desarrollen conductas positivas apropiadas. Si no son tratados, los comportamientos negativos pueden llevar a riesgos adicionales, tales como el fracaso académico y dificultades sociales, que aumentan el riesgo de los niños para el abuso de drogas en el futuro.
+        </p>
     </body>
 </html>
