--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+    	<script type="text/javascript" src="custom.js"></script>
+        
+               <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
             <link href="custom.css" rel="stylesheet" type="text/css">
                 <meta charset="utf-8">
                     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -14,13 +18,15 @@
         </link>
     </head>
     <body class="container">
-        <p id="top">
-            UNIVERSIDAD AUTONOMA DE SINALOA
-            <svg class="bi bi-gem" fill="currentColor" height="16" viewbox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
-                <path d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6l3-4zm11.386 3.785-1.806-2.41-.776 2.413 2.582-.003zm-3.633.004.961-2.989H4.186l.963 2.995 5.704-.006zM5.47 5.495 8 13.366l2.532-7.876-5.062.005zm-1.371-.999-.78-2.422-1.818 2.425 2.598-.003zM1.499 5.5l5.113 6.817-2.192-6.82L1.5 5.5zm7.889 6.817 5.123-6.83-2.928.002-2.195 6.828z">
-                </path>
-            </svg>
-        </p>
+        <div id="top">
+            <p>
+                UNIVERSIDAD AUTONOMA DE SINALOA
+                <svg class="bi bi-gem" fill="currentColor" height="16" viewbox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6l3-4zm11.386 3.785-1.806-2.41-.776 2.413 2.582-.003zm-3.633.004.961-2.989H4.186l.963 2.995 5.704-.006zM5.47 5.495 8 13.366l2.532-7.876-5.062.005zm-1.371-.999-.78-2.422-1.818 2.425 2.598-.003zM1.499 5.5l5.113 6.817-2.192-6.82L1.5 5.5zm7.889 6.817 5.123-6.83-2.928.002-2.195 6.828z">
+                    </path>
+                </svg>
+            </p>
+        </div>
         <div class="container" id="imagenes_top">
             <div class="row">
                 <div class="col">
@@ -87,7 +93,80 @@
                 </br>
             </div>
         </div>
-        <hr class="linea" width="90%">
+
+
+
+
+
+
+
+
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="2000">
+      <img src="imagenes/carrusel/foto1.jpg" class="d-block w-100" alt="...">
+
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="imagenes/carrusel/foto2.jpg" class="d-block w-100" alt="...">
+
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="imagenes/carrusel/foto3.png" class="d-block w-100" alt="...">
+
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <br>
                 <h2>
                     Criterios para coevaluacion de temas de educacion para la salud
@@ -278,24 +357,32 @@
                         </div>
                     </div>
                 </div>
-                <h2>
-                    INFORMA SOBRE MÉTODOS ANTICONCEPTIVOS Y PROMUEVE EL USO DE CONDONES
-                </h2>
-                <p>
-                    Proporcionar información sobre métodos anticonceptivos y sobre el uso del condón, basada en la mejor evidencia científica disponible, obedece al respeto hacia los derechos sexuales y reproductivos y permite a las y los adolescentes corresponsabilizarse de su salud al elegir el método más adecuado a sus necesidades.
-                </p>
-                <h2>
-                    Verifica riesgo de TB y, en presencia de tos y flema, toma muestra para baciloscopia.
-                </h2>
-                <p>
-                    La tuberculosis pulmonar (confirmada por baciloscopia) es la fuente de infección más frecuente y constituye el objetivo fundamental de las actividades de detección, diagnóstico y tratamiento para el control de la enfermedad. A toda persona que presente tos con flema y/o sangre es necesario realizarle cuanto antes una baciloscopia. En caso de resultar positiva, anota la fecha de inicio y de fin de tratamiento en la Cartilla Nacional de Salud Adolescentes de 10 a 19 años.
-                </p>
-                <h2>
-                    Administra quimioprofilaxis para tuberculosis pulmonar.
-                </h2>
-                <p>
-                    Para proteger a todas las y los adolescentes que tengan contacto con enfermos de tuberculosis pulmonar. Se administra durante 12 meses a los contactos de tuberculosis de 15 años o más, con infección por VIH o con otra causa de Inmunodeficiencia. Previamente debe descartarse tuberculosis.
-                </p>
+                <div class="row">
+                    <div class="col text_left">
+                        INFORMA SOBRE MÉTODOS ANTICONCEPTIVOS Y PROMUEVE EL USO DE CONDONES
+                    </div>
+                    <div class="col text_left">
+                        Verifica riesgo de TB y, en presencia de tos y flema, toma muestra para baciloscopia.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text_left">
+                        Proporcionar información sobre métodos anticonceptivos y sobre el uso del condón, basada en la mejor evidencia científica disponible, obedece al respeto hacia los derechos sexuales y reproductivos y permite a las y los adolescentes corresponsabilizarse de su salud al elegir el método más adecuado a sus necesidades.
+                    </div>
+                    <div class="col text_left">
+                        La tuberculosis pulmonar (confirmada por baciloscopia) es la fuente de infección más frecuente y constituye el objetivo fundamental de las actividades de detección, diagnóstico y tratamiento para el control de la enfermedad. A toda persona que presente tos con flema y/o sangre es necesario realizarle cuanto antes una baciloscopia. En caso de resultar positiva, anota la fecha de inicio y de fin de tratamiento en la Cartilla Nacional de Salud Adolescentes de 10 a 19 años.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Administra quimioprofilaxis para tuberculosis pulmonar.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text_left">
+                        Para proteger a todas las y los adolescentes que tengan contacto con enfermos de tuberculosis pulmonar. Se administra durante 12 meses a los contactos de tuberculosis de 15 años o más, con infección por VIH o con otra causa de Inmunodeficiencia. Previamente debe descartarse tuberculosis.
+                    </div>
+                </div>
                 <h2>
                     Evalúa estado nutricional y proporciona orientación alimentaria.
                 </h2>
