--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="2000">
-      <img src="imagenes/carrusel/foto1.jpg" class="d-block w-100" alt="...">
+      <img src="imagenes/foto1.jpg" class="d-block w-100" alt="...">
 
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="imagenes/carrusel/foto2.jpg" class="d-block w-100" alt="...">
+      <img src="imagenes/foto2.jpg" class="d-block w-100" alt="...">
 
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="imagenes/carrusel/foto3.png" class="d-block w-100" alt="...">
+      <img src="imagenes/foto3.png" class="d-block w-100" alt="...">
 
     </div>
   </div>
