--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col">
                     Asignatura
                     <br>
-                        Enermeria en familia y comunidad
+                        Enfermeria en familia y comunidad
                     </br>
                 </div>
                 <div class="col">
@@ -129,20 +129,17 @@
                 </div>
             </div>
             <div class="col">
-                Alumnas
+                Alumnos
                 <br>
                     <div class="list-group">
                         <div class="list-group-item">
-                            Armenta Zavala María Azucena
+                            Adriel Manzanares
                         </div>
                         <div class="list-group-item">
-                            Castro Armenta Nadia Fernanda
+                            María Bojórquez
                         </div>
                         <div class="list-group-item">
-                            Bojórquez Zepeda María Esther
-                        </div>
-                        <div class="list-group-item">
-                            Hernández LaChica Diana Lizbeth
+                            Diana Hernández
                         </div>
                     </div>
                 </br>
