--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">
-                            Semana 15
+                            Carrusel
                         </h5>
                         <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
                         </button>
